--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="navtxt">
-    <a href="#home">Home</a>    
+    <a href="https://zefraglobal.com/home/index.html">Home</a>    
     <a href="https://forms.gle/CeXcmDC7RMbGZd48A">Apply</a>
     <a href="mailto:afroinnovatetechinstitute@gmail.com">Contact Us</a>
     </div>
