--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="hero">
         <div class="herotxt">
             <h2>Learn Tech</h2>
-            <h4>Apply for courses and enroll for and affordable and free packages.</h4>
+            <h4>Apply for courses and enrol for affordable and free packages.</h4>
         </div>
     </div>
      
